Replace Java 15's String.formatted instance method with Java 5 compatible String.format static method